# hfmdd-video-system

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CustomDark.qss  Mondrian.qss  README.md  buildspec.json
node-scripts/: mail-sender.js  package-lock.json  package.json
src/: admin-mail-dialog.ui  admin-mail-dialog.ui.autosave  animated-dialog.cpp  animated-dialog.hpp  backend.cpp  backend.hpp  booking-editor.cpp  booking-editor.hpp  booking-editor.ui  booking-handler.cpp  booking-handler.hpp  booking-manager.cpp  booking-manager.hpp  booking-manager.ui  booking.h  circularlistview.cpp  circularlistview.hpp  file-sender.cpp  file-sender.hpp  fullscreen-dialog.cpp  fullscreen-dialog.hpp  globals.cpp  globals.hpp  info-dialog.ui  json-parser.cpp  json-parser.h  json-parser.hpp  language.hpp  login-dialog-reference.ui  login-dialog.cpp  login-dialog.hpp  login-dialog.qrc  login-dialog.ui  login.cpp  login.hpp  login.ui  mail-handler.cpp  mail-handler.hpp  message-box.cpp  message-box.hpp  (+44 more)
src/imported/: properties-view.cpp  properties-view.hpp  properties-view.moc.hpp
